# dendrite-python-sdk

./: .env.example  .gitignore  LICENSE  README.md  ai_agent_founders.xlsx  cookies.json  dendrite.toml  error.json  fishards_reviews.xlsx  publish.py  pyproject.toml  requirements.txt  test.py
.dendrite/cache/: extract.json  get_element.json  storage_state.json
.dendrite/test_cache/: get_element.json
.github/workflows/: ci.yml  python-publish.yml
dendrite/: __init__.py
dendrite/.dendrite/cache/: get_element.json
dendrite/_cli/: main.py
dendrite/_loggers/: d_logger.py
dendrite/exceptions/: __init__.py
dendrite/logic/: __init__.py  async_logic_engine.py  config.py  factory.py  sync_logic_engine.py  verify_interaction.py
dendrite/models/: api_config.py  page_information.py  scripts.py  selector.py  status.py
dendrite/remote/: __init__.py  browserbase_config.py  browserless_config.py  provider.py
dendrite_python_sdk/: DendriteAPI.py  InteractionTypes.py  __init__.py  models.py  openai_tools.py  request_handler.py
dendrite_python_sdk/_api/: _http_client.py  browser_api_client.py
dendrite_python_sdk/_common/: constants.py  event_sync.py
dendrite_python_sdk/_core/: _base_browser.py  _type_spec.py  _utils.py  dendrite_browser.py  dendrite_element.py  dendrite_page.py  dendrite_remote_browser.py
dendrite_python_sdk/_exceptions/: incorrect_outcome_exception.py
dendrite_python_sdk/ai_util/: generate_text.py  response_extract.py
dendrite_python_sdk/browserbase/: session.py
dendrite_python_sdk/dendrite_browser/: ActivePageManager.py  DendriteBrowser.py  DendriteElement.py  DendriteLocator.py  DendritePage.py  DendriteRemoteBrowser.py  HTTPClient.py  ScreenshotManager.py  SelectorManager.py  browser_api_client.py  constants.py  type_spec.py  utils.py
dendrite_python_sdk/dto/: AskPageDTO.py  GetElementsDTO.py  GetInteractionDTO.py  GetSessionDTO.py  GoogleSearchDTO.py  MakeInteractionDTO.py  ScrapePageDTO.py  TryRunScriptDTO.py  UploadAuthSessionDTO.py  UploadSessionDTO.py
dendrite_python_sdk/examples/: agent.py  arseny.py  authenticated_session.py  banking_agent.py  discord_test.py  dowload_file.py  fishards_test.py  get_product_data.py  get_recipe.py  get_steam_reviews.py  outlook_agent.py  pap.py  portfolio_test.py  powermate_google_test.py  product_data.py  review_sentiment.py  revive_retail.py  send_discord_message.py  simple_example.py  yc.py
dendrite_python_sdk/exceptions/: DendriteException.py  IncorrectOutcomeException.py
dendrite_python_sdk/ext/: __init__.py  _remote_provider.py
dendrite_python_sdk/models/: LLMConfig.py  PageDeltaInformation.py  PageInformation.py
dendrite_python_sdk/responses/: AskPageResponse.py  InteractionResponse.py  ScrapePageResponse.py  SessionResponse.py
dendrite_sdk/: __init__.py
dendrite_sdk/_api/: _http_client.py  browser_api_client.py
dendrite_sdk/_cli/: main.py
dendrite_sdk/_common/: constants.py  event_sync.py  status.py
dendrite_sdk/_core/: _base_browser.py  _type_spec.py  _utils.py  dendrite_browser.py  dendrite_element.py  dendrite_page.py  dendrite_remote_browser.py  global_browser.py
dendrite_sdk/_exceptions/: dendrite_exception.py  incorrect_outcome_exception.py
dendrite_sdk/async_api/: __init__.py
dendrite_sdk/dendrite_logger/: __init__.py  event.py  html.py  html_generator.py  logger.py
dendrite_sdk/exceptions/: __init__.py
dendrite_sdk/ext/: __init__.py  _remote_provider.py  bfloat_provider.py  provider.py
dendrite_sdk/remote/: __init__.py  browserbase_config.py  browserless_config.py  provider.py
dendrite_sdk/sync_api/: __init__.py
dendrite_sdk/tests/: tests.py
examples/: github_repo_download.py
examples_2/: authenticate_on_instagram.py  banking_agent.py  get_recipe.py  outlook_agent.py
scripts/: generate_sync.py
tests/: test_routes.py
tests/tests_async/: conftest.py  test_browserbase.py  test_download.py  test_many.py  tests.py
tests/tests_sync/: conftest.py  test_context.py  test_download.py
utils/: test.py
(+513 files in other folders)
