[tool.poetry]
name = "dendrite-python-sdk"
version = "0.1.0"
description = ""
authors = [
   "Arian Hanifi <arian@dendrite.se>",
   "Charles Maddock <charles@dendrite.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.0"
playwright = "^1.43.0"
bs4 = "^0.0.2"
lxml = "^5.2.1"
typing-extensions = "^4.12.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
pylint = "^3.2.6"
black = "^24.8.0"


[build-system]
requires = ["poetry-core", "requests", "python-dotenv", "pydantic"]
build-backend = "poetry.core.masonry.api"
